istio/nodeapp.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nodeapp-ENV_NAME
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodeapp
        version: "VERSION"
        internal: nodedemo
    spec:
      containers:
      - name: nodeapp
        image: registry.ng.bluemix.net/bo_namespace/mynodeapp:VERSION
        ports:
        - containerPort: 8888
