istio/nodeapp-8.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  labels:
    app: nodeapp
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: nodeapp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodeapp-vVERSION
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodeapp
        version: vVERSION
        tag: blue
    spec:
      containers:
      - name: nodeapp
        image: registry.ng.bluemix.net/bo_namespace/mynodeapp:VERSION
   #     imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
