istio/nodeapp_all.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodeapp-ENV_NAME
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodeapp
        version: vVERSION
    spec:
      containers:
      - name: nodeapp
        image: registry.ng.bluemix.net/bo_namespace/mynodeapp:VERSION
        ports:
        - containerPort: 8888        
---
apiVersion: v1
kind: Service
metadata:
  name: bg-blue-istio
  labels:
    app: nodeapp
    tag: blue
spec:
  type: NodePort
  ports:
   - protocol: TCP
     port: 8888
     nodePort: 30070
  selector:
    app: nodeapp
---
apiVersion: v1
kind: Service
metadata:
  name: bg-green-istio
  labels:
    app: nodeapp
    tag: green
spec:
  type: NodePort
  ports:
   - protocol: TCP
     port: 8888
     nodePort: 30071
  selector:
    app: nodeapp
