istio/nodeapp-reuse-gateway-8.yaml
##################################################################################################
# Reuse bookinfo-gateway to support 2 website: nodeapp and productpage
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodeapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeappinfo
spec:
  hosts:
  - "*"
  gateways:
  - nodeapp-gateway
  http:
  - match:
    - uri:
        prefix: /nodeapp/blue
    rewrite:
      uri: "/"
    route:
    - destination:
        host: nodeapp
        port:
          number: 8888
        subset: blue
  - match:
    - uri:
        prefix: /nodeapp/green
    rewrite:
      uri: "/"
    route:
    - destination:
        host: nodeapp
        port:
          number: 8888
        subset: green
  - match:
    - uri:
        exact: /productpage
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080

---
